[package]
name = "rustworkx"
description = "A python graph library implemented in Rust"
readme = "README.md"
keywords = ["python", "graph"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[workspace]
members = [
    "rustworkx-core",
]

[workspace.package]
version = "0.16.0"
edition = "2021"
rust-version = "1.70"
authors = ["Matthew Treinish <mtreinish@kortar.org>"]
repository = "https://github.com/Qiskit/rustworkx"
license = "Apache-2.0"

[workspace.dependencies]
foldhash = "0.1.2"
fixedbitset = "0.4.2"
hashbrown = { version = ">=0.13, <0.15", features = ["rayon"] }
indexmap = { version = ">=1.9, <3", features = ["rayon"] }
ndarray = { version = "0.16.1", features = ["rayon"] }
num-traits = "0.2"
numpy = "0.22"
petgraph = "0.6.5"
rand = "0.8"
rand_pcg = "0.3"
rayon = "1.10"

[lib]
name = "rustworkx"
crate-type = ["cdylib"]

[dependencies]
foldhash.workspace = true
fixedbitset.workspace = true
hashbrown.workspace = true
indexmap.workspace = true
ndarray.workspace = true
ndarray-stats = "0.6.0"
num-bigint = "0.4"
num-complex = "0.4"
num-traits.workspace = true
numpy.workspace = true
petgraph.workspace = true
quick-xml = "0.37"
rand.workspace = true
rand_pcg.workspace = true
rayon.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.0", features = ["union"] }
rustworkx-core = { path = "rustworkx-core", version = "=0.16.0" }

[dependencies.pyo3]
version = "0.22.6"
features = ["abi3-py39", "extension-module", "hashbrown", "num-bigint", "num-complex", "indexmap", "py-clone"]

[dependencies.sprs]
version = "^0.11"
features = ["multi_thread"]

[profile.release]
lto = 'fat'
codegen-units = 1
