[metadata]
name = retworkx
version = 0.4.0
author = Matthew Treinish
author_email = mtreinish@kortar.org
description = A python graph library implemented in Rust
keywords =
    Networks
    network
    graph
    Graph
    Theory
    DAG
url = https://github.com/Qiskit/retworkx
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Rust
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux

project_urls = 
    Bug Tracker = https://github.com/Qiskit/retworkx/issues
    Source Code = https://github.com/Qiskit/retworkx
    Documentation = https://retworkx.readthedocs.io


[options]
packages = retworkx
zip_safe = False
install_requires = numpy>=1.16.0
include_package_data = True
python_requires = >=3.5
