[package]
name = "retworkx-core"
version = "0.11.0"
edition = "2018"
authors = ["Matthew Treinish <mtreinish@kortar.org>"]
description = "Rust APIs used for retworkx algorithms"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Qiskit/retworkx"
homepage = "https://github.com/Qiskit/retworkx/tree/main/retworkx-core"
keywords = ["graph"]

[dependencies]
ahash = { version = "0.7.6", default-features = false }
petgraph = "0.6.0"
rayon = "1.5"
dary_heap = "0.2.5"

[dependencies.hashbrown]
version = "0.11"
features = ["rayon"]

[dependencies.indexmap]
version = "1.7"
features = ["rayon"]
