[package]
name = "rustworkx-core"
version = "0.13.2"
edition = "2021"
authors = ["Matthew Treinish <mtreinish@kortar.org>"]
description = "Rust APIs used for rustworkx algorithms"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Qiskit/rustworkx"
homepage = "https://github.com/Qiskit/rustworkx/tree/main/rustworkx-core"
keywords = ["graph"]

[dependencies]
ahash = "0.8.0"
fixedbitset = "0.4.2"
petgraph = "0.6.3"
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.6"
num-traits = "0.2"
priority-queue = "1.2"
rayon-cond = "0.2"

[dependencies.hashbrown]
version = ">=0.12, <0.15"
features = ["rayon"]

[dependencies.indexmap]
version = ">=1.9, < 3"
features = ["rayon"]
